--- a/public/index.html
+++ b/public/index.html
@@ -1,1 +1,96 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>AI Web Scraper</title>
+    <!-- Tailwind CSS -->
+    <link href="/css/styles.css" rel="stylesheet">
+    <!-- Bootstrap Icons -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <!-- SweetAlert2 -->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <style>
+        /* Custom Loading Animation */
+        .loader {
+            width: 50px;
+            aspect-ratio: 1;
+            border-radius: 50%;
+            border: 8px solid #514b82;
+            animation:
+              l20-1 0.8s infinite linear alternate,
+              l20-2 1.6s infinite linear;
+        }
+        @keyframes l20-1 {
+           0%    {clip-path: polygon(50% 50%,0 0,50% 0,50% 0,50% 0,50% 0)}
+           12.5% {clip-path: polygon(50% 50%,0 0,50% 0,100% 0,100% 0,100% 0)}
+           25%   {clip-path: polygon(50% 50%,0 0,50% 0,100% 0,100% 100%,100% 100%)}
+           50%   {clip-path: polygon(50% 50%,0 0,50% 0,100% 0,100% 100%,0 100%)}
+           62.5% {clip-path: polygon(50% 50%,0 0,50% 0,100% 0,100% 100%,0 100%)}
+           75%   {clip-path: polygon(50% 50%,0 0,50% 0,50% 0,50% 0,50% 0)}
+           100%  {clip-path: polygon(50% 50%,0 0,50% 0,50% 0,50% 0,50% 0)}
+        }
+        @keyframes l20-2 { 
+          0%    {transform:scaleY(1)  rotate(0deg)}
+          49.99%{transform:scaleY(1)  rotate(135deg)}
+          50%   {transform:scaleY(-1) rotate(-135deg)}
+          100%  {transform:scaleY(-1) rotate(-360deg)}
+        }
+    </style>
+</head>
+<body class="bg-gray-900 text-gray-200 font-sans flex flex-col items-center min-h-screen p-4">
 
+    <div class="w-full max-w-4xl mx-auto">
+        <!-- Header -->
+        <header class="flex justify-between items-center mb-6">
+            <h1 class="text-3xl font-bold text-white">AI Web Scraper</h1>
+            <div class="flex items-center space-x-4 text-2xl">
+                <a href="https://github.com/Yushae" target="_blank" class="text-gray-400 hover:text-white transition-colors" title="Source Code">
+                    <i class="bi bi-github"></i>
+                </a>
+                <a href="https://www.facebook.com/yushae.san" target="_blank" class="text-gray-400 hover:text-white transition-colors" title="Contact Owner">
+                    <i class="bi bi-facebook"></i>
+                </a>
+            </div>
+        </header>
+
+        <!-- Input Form -->
+        <form id="scrape-form" class="flex items-center gap-2 mb-6">
+            <input type="text" id="url-input" placeholder="Enter a URL (e.g., youtube.com)" class="flex-grow p-3 bg-gray-800 border border-gray-700 rounded-lg focus:outline-none focus:ring-2 focus:ring-purple-500">
+            <button type="submit" id="extract-button" class="bg-purple-600 hover:bg-purple-700 text-white font-bold py-3 px-5 rounded-lg transition-colors flex items-center justify-center">
+                <i class="bi bi-magic text-xl"></i>
+            </button>
+        </form>
+
+        <!-- Loading Indicator -->
+        <div id="loader" class="hidden mx-auto my-10">
+             <div class="loader"></div>
+        </div>
+       
+        <!-- Result Box -->
+        <div id="result-container" class="hidden bg-gray-800 border border-gray-700 rounded-lg">
+            <!-- Result Header -->
+            <div class="flex justify-between items-center p-3 bg-gray-700/50 rounded-t-lg">
+                <h2 class="text-lg font-semibold">JSON Result</h2>
+                <div class="flex items-center space-x-3 text-xl">
+                    <button id="download-button" title="Download as JSON" class="text-gray-400 hover:text-white"><i class="bi bi-download"></i></button>
+                    <button id="refresh-button" title="Refresh/Re-scrape" class="text-gray-400 hover:text-white"><i class="bi bi-arrow-clockwise"></i></button>
+                    <button id="raw-view-button" title="Toggle Raw/Pretty View" class="text-gray-400 hover:text-white"><i class="bi bi-filetype-raw"></i></button>
+                </div>
+            </div>
+            <!-- JSON Content -->
+            <div class="p-4 overflow-x-auto">
+                <pre><code id="json-result-box" class="language-json text-sm"></code></pre>
+            </div>
+        </div>
+        
+        <!-- Welcome/Instruction Message -->
+        <div id="welcome-message" class="mt-8 text-center text-gray-500">
+            <p>Enter a website URL and click the magic button to let the AI extract data into JSON.</p>
+        </div>
+    </div>
+
+    <!-- Client-side Logic -->
+    <script src="/js/main.js"></script>
+</body>
+</html>
