--- a/public/index.html
+++ b/public/index.html
@@ -5,92 +5,87 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AI Web Scraper</title>
     <!-- Tailwind CSS -->
-    <link href="/css/styles.css" rel="stylesheet">
+    <link href="/css/style.css" rel="stylesheet">
     <!-- Bootstrap Icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <!-- SweetAlert2 -->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <style>
-        /* Custom Loading Animation */
-        .loader {
-            width: 50px;
-            aspect-ratio: 1;
-            border-radius: 50%;
-            border: 8px solid #514b82;
-            animation:
-              l20-1 0.8s infinite linear alternate,
-              l20-2 1.6s infinite linear;
+        /* Custom styles for the code block */
+        #jsonResult pre {
+            white-space: pre-wrap;
+            word-wrap: break-word;
+            background-color: #1E293B; /* slate-800 */
+            color: #E2E8F0; /* slate-200 */
+            padding: 1rem;
+            border-radius: 0.5rem;
+            max-height: 60vh;
+            overflow-y: auto;
         }
-        @keyframes l20-1 {
-           0%    {clip-path: polygon(50% 50%,0 0,50% 0,50% 0,50% 0,50% 0)}
-           12.5% {clip-path: polygon(50% 50%,0 0,50% 0,100% 0,100% 0,100% 0)}
-           25%   {clip-path: polygon(50% 50%,0 0,50% 0,100% 0,100% 100%,100% 100%)}
-           50%   {clip-path: polygon(50% 50%,0 0,50% 0,100% 0,100% 100%,0 100%)}
-           62.5% {clip-path: polygon(50% 50%,0 0,50% 0,100% 0,100% 100%,0 100%)}
-           75%   {clip-path: polygon(50% 50%,0 0,50% 0,50% 0,50% 0,50% 0)}
-           100%  {clip-path: polygon(50% 50%,0 0,50% 0,50% 0,50% 0,50% 0)}
-        }
-        @keyframes l20-2 { 
-          0%    {transform:scaleY(1)  rotate(0deg)}
-          49.99%{transform:scaleY(1)  rotate(135deg)}
-          50%   {transform:scaleY(-1) rotate(-135deg)}
-          100%  {transform:scaleY(-1) rotate(-360deg)}
-        }
+        /* Custom scrollbar for webkit browsers */
+        #jsonResult pre::-webkit-scrollbar { width: 8px; }
+        #jsonResult pre::-webkit-scrollbar-track { background: #334155; }
+        #jsonResult pre::-webkit-scrollbar-thumb { background: #64748B; border-radius: 4px; }
+        #jsonResult pre::-webkit-scrollbar-thumb:hover { background: #94A3B8; }
     </style>
 </head>
-<body class="bg-gray-900 text-gray-200 font-sans flex flex-col items-center min-h-screen p-4">
+<body class="bg-slate-900 text-slate-300 font-sans flex flex-col min-h-screen">
 
-    <div class="w-full max-w-4xl mx-auto">
-        <!-- Header -->
-        <header class="flex justify-between items-center mb-6">
-            <h1 class="text-3xl font-bold text-white">AI Web Scraper</h1>
-            <div class="flex items-center space-x-4 text-2xl">
-                <a href="https://github.com/Yushae" target="_blank" class="text-gray-400 hover:text-white transition-colors" title="Source Code">
-                    <i class="bi bi-github"></i>
-                </a>
-                <a href="https://www.facebook.com/yushae.san" target="_blank" class="text-gray-400 hover:text-white transition-colors" title="Contact Owner">
-                    <i class="bi bi-facebook"></i>
-                </a>
-            </div>
+    <div class="container mx-auto p-4 md:p-8 flex-grow">
+        <header class="text-center mb-8">
+            <h1 class="text-4xl md:text-5xl font-bold text-transparent bg-clip-text bg-gradient-to-r from-sky-400 to-emerald-400">
+                AI Web Scraper
+            </h1>
+            <p class="text-slate-400 mt-2">Enter a URL, and let AI extract the data into structured JSON.</p>
         </header>
 
-        <!-- Input Form -->
-        <form id="scrape-form" class="flex items-center gap-2 mb-6">
-            <input type="text" id="url-input" placeholder="Enter a URL (e.g., youtube.com)" class="flex-grow p-3 bg-gray-800 border border-gray-700 rounded-lg focus:outline-none focus:ring-2 focus:ring-purple-500">
-            <button type="submit" id="extract-button" class="bg-purple-600 hover:bg-purple-700 text-white font-bold py-3 px-5 rounded-lg transition-colors flex items-center justify-center">
-                <i class="bi bi-magic text-xl"></i>
-            </button>
-        </form>
+        <!-- Input Section -->
+        <main class="max-w-4xl mx-auto">
+            <div class="flex items-center bg-slate-800 border border-slate-700 rounded-lg shadow-lg p-2">
+                <input type="text" id="urlInput" class="w-full bg-transparent p-3 text-lg text-slate-200 focus:outline-none" placeholder="e.g., youtube.com, news.ycombinator.com">
+                <button id="scrapeBtn" class="bg-sky-500 hover:bg-sky-600 text-white font-bold rounded-md px-5 py-3 transition-colors duration-300 flex items-center" title="Extract Data">
+                    <i class="bi bi-magic text-xl"></i>
+                    <span class="ml-2 hidden md:inline">Extract</span>
+                </button>
+            </div>
 
-        <!-- Loading Indicator -->
-        <div id="loader" class="hidden mx-auto my-10">
-             <div class="loader"></div>
-        </div>
-       
-        <!-- Result Box -->
-        <div id="result-container" class="hidden bg-gray-800 border border-gray-700 rounded-lg">
-            <!-- Result Header -->
-            <div class="flex justify-between items-center p-3 bg-gray-700/50 rounded-t-lg">
-                <h2 class="text-lg font-semibold">JSON Result</h2>
-                <div class="flex items-center space-x-3 text-xl">
-                    <button id="download-button" title="Download as JSON" class="text-gray-400 hover:text-white"><i class="bi bi-download"></i></button>
-                    <button id="refresh-button" title="Refresh/Re-scrape" class="text-gray-400 hover:text-white"><i class="bi bi-arrow-clockwise"></i></button>
-                    <button id="raw-view-button" title="Toggle Raw/Pretty View" class="text-gray-400 hover:text-white"><i class="bi bi-filetype-raw"></i></button>
+            <!-- Loading Spinner -->
+            <div id="loader" class="text-center my-8 hidden">
+                <div class="spinner-border animate-spin inline-block w-12 h-12 border-4 rounded-full border-t-sky-400" role="status">
+                    <span class="visually-hidden">Loading...</span>
+                </div>
+                 <p class="mt-4 text-slate-400">AI is analyzing the page... this may take a moment.</p>
+            </div>
+
+            <!-- Result Section -->
+            <div id="resultContainer" class="mt-8 bg-slate-800 border border-slate-700 rounded-lg shadow-lg hidden">
+                <div class="flex justify-between items-center p-4 border-b border-slate-700">
+                    <h2 class="text-xl font-semibold text-slate-100">JSON Result</h2>
+                    <div class="flex items-center space-x-3 text-2xl">
+                        <button id="refreshBtn" class="text-slate-400 hover:text-white transition-colors" title="Scrape Again"><i class="bi bi-arrow-clockwise"></i></button>
+                        <button id="downloadBtn" class="text-slate-400 hover:text-white transition-colors" title="Download as JSON"><i class="bi bi-download"></i></button>
+                        <button id="rawBtn" class="text-slate-400 hover:text-white transition-colors" title="View as Raw"><i class="bi bi-file-earmark-code"></i></button>
+                    </div>
+                </div>
+                <div id="jsonResult" class="p-4">
+                    <!-- JSON will be injected here -->
                 </div>
             </div>
-            <!-- JSON Content -->
-            <div class="p-4 overflow-x-auto">
-                <pre><code id="json-result-box" class="language-json text-sm"></code></pre>
-            </div>
-        </div>
-        
-        <!-- Welcome/Instruction Message -->
-        <div id="welcome-message" class="mt-8 text-center text-gray-500">
-            <p>Enter a website URL and click the magic button to let the AI extract data into JSON.</p>
-        </div>
+        </main>
     </div>
 
-    <!-- Client-side Logic -->
+    <!-- Footer -->
+    <footer class="text-center p-4 text-slate-500">
+        <div class="flex justify-center space-x-6 text-2xl mb-2">
+            <a href="https://github.com/YOUR_USERNAME/ai-scraper" target="_blank" class="hover:text-sky-400 transition-colors" title="View Source on GitHub"><i class="bi bi-github"></i></a>
+            <a href="https://www.facebook.com/YOUR_PROFILE" target="_blank" class="hover:text-sky-400 transition-colors" title="Contact Owner on Facebook"><i class="bi bi-facebook"></i></a>
+        </div>
+        <p>Created with ❤️ using Node.js, Express, and Gemini AI.</p>
+    </footer>
+
+    <!-- Bootstrap JS (for spinner functionality) -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Custom JS -->
     <script src="/js/main.js"></script>
 </body>
 </html>
