--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="dark">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,81 +11,81 @@
     <!-- SweetAlert2 -->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <style>
-        /* Custom styles for the code block */
-        #jsonResult pre {
-            white-space: pre-wrap;
-            word-wrap: break-word;
-            background-color: #1E293B; /* slate-800 */
-            color: #E2E8F0; /* slate-200 */
-            padding: 1rem;
-            border-radius: 0.5rem;
-            max-height: 60vh;
-            overflow-y: auto;
+        /* Custom loading animation */
+        .loader {
+            width: 50px;
+            height: 50px;
+            border: 5px solid #FFF;
+            border-bottom-color: transparent;
+            border-radius: 50%;
+            display: inline-block;
+            box-sizing: border-box;
+            animation: rotation 1s linear infinite;
         }
-        /* Custom scrollbar for webkit browsers */
-        #jsonResult pre::-webkit-scrollbar { width: 8px; }
-        #jsonResult pre::-webkit-scrollbar-track { background: #334155; }
-        #jsonResult pre::-webkit-scrollbar-thumb { background: #64748B; border-radius: 4px; }
-        #jsonResult pre::-webkit-scrollbar-thumb:hover { background: #94A3B8; }
+        @keyframes rotation {
+            0% { transform: rotate(0deg); }
+            100% { transform: rotate(360deg); }
+        }
     </style>
 </head>
-<body class="bg-slate-900 text-slate-300 font-sans flex flex-col min-h-screen">
+<body class="bg-gray-900 text-gray-200 font-sans antialiased">
 
-    <div class="container mx-auto p-4 md:p-8 flex-grow">
-        <header class="text-center mb-8">
-            <h1 class="text-4xl md:text-5xl font-bold text-transparent bg-clip-text bg-gradient-to-r from-sky-400 to-emerald-400">
-                AI Web Scraper
+    <div class="container mx-auto p-4 md:p-8 max-w-4xl">
+        <!-- Header -->
+        <header class="flex justify-between items-center mb-6">
+            <h1 class="text-3xl md:text-4xl font-bold text-cyan-400">
+                <i class="bi bi-robot mr-2"></i>AI Web Scraper
             </h1>
-            <p class="text-slate-400 mt-2">Enter a URL, and let AI extract the data into structured JSON.</p>
+            <div class="flex items-center space-x-4 text-xl">
+                <a href="https://github.com/YOUR_GITHUB_USERNAME/ai-web-scraper" target="_blank" class="text-gray-400 hover:text-white transition-colors" title="Source Code">
+                    <i class="bi bi-github"></i>
+                </a>
+                <a href="https://facebook.com/YOUR_FACEBOOK_USERNAME" target="_blank" class="text-gray-400 hover:text-cyan-400 transition-colors" title="Contact Owner">
+                    <i class="bi bi-facebook"></i>
+                </a>
+            </div>
         </header>
 
-        <!-- Input Section -->
-        <main class="max-w-4xl mx-auto">
-            <div class="flex items-center bg-slate-800 border border-slate-700 rounded-lg shadow-lg p-2">
-                <input type="text" id="urlInput" class="w-full bg-transparent p-3 text-lg text-slate-200 focus:outline-none" placeholder="e.g., youtube.com, news.ycombinator.com">
-                <button id="scrapeBtn" class="bg-sky-500 hover:bg-sky-600 text-white font-bold rounded-md px-5 py-3 transition-colors duration-300 flex items-center" title="Extract Data">
-                    <i class="bi bi-magic text-xl"></i>
-                    <span class="ml-2 hidden md:inline">Extract</span>
+        <!-- Input Form -->
+        <form id="scrape-form" class="mb-8">
+            <div class="relative">
+                <input type="text" id="url-input" placeholder="Enter a URL (e.g., youtube.com, news.ycombinator.com)" class="w-full p-4 pr-16 bg-gray-800 border-2 border-gray-700 rounded-lg focus:ring-2 focus:ring-cyan-500 focus:border-cyan-500 focus:outline-none transition-colors">
+                <button type="submit" id="extract-button" class="absolute top-1/2 right-4 -translate-y-1/2 text-2xl text-gray-400 hover:text-cyan-400 transition-colors" title="Extract Data">
+                    <i class="bi bi-magic"></i>
                 </button>
             </div>
+        </form>
 
-            <!-- Loading Spinner -->
-            <div id="loader" class="text-center my-8 hidden">
-                <div class="spinner-border animate-spin inline-block w-12 h-12 border-4 rounded-full border-t-sky-400" role="status">
-                    <span class="visually-hidden">Loading...</span>
-                </div>
-                 <p class="mt-4 text-slate-400">AI is analyzing the page... this may take a moment.</p>
-            </div>
+        <!-- Loading State Placeholder -->
+        <div id="loading-state" class="text-center py-10 hidden">
+            <div class="loader mx-auto"></div>
+            <p class="mt-4 text-gray-400">AI is analyzing the website... Please wait.</p>
+        </div>
 
-            <!-- Result Section -->
-            <div id="resultContainer" class="mt-8 bg-slate-800 border border-slate-700 rounded-lg shadow-lg hidden">
-                <div class="flex justify-between items-center p-4 border-b border-slate-700">
-                    <h2 class="text-xl font-semibold text-slate-100">JSON Result</h2>
-                    <div class="flex items-center space-x-3 text-2xl">
-                        <button id="refreshBtn" class="text-slate-400 hover:text-white transition-colors" title="Scrape Again"><i class="bi bi-arrow-clockwise"></i></button>
-                        <button id="downloadBtn" class="text-slate-400 hover:text-white transition-colors" title="Download as JSON"><i class="bi bi-download"></i></button>
-                        <button id="rawBtn" class="text-slate-400 hover:text-white transition-colors" title="View as Raw"><i class="bi bi-file-earmark-code"></i></button>
+        <!-- Result Box -->
+        <div id="result-box" class="hidden">
+            <div class="bg-gray-800 border border-gray-700 rounded-lg shadow-lg">
+                <!-- Result Header -->
+                <div class="flex justify-between items-center p-4 border-b border-gray-700">
+                    <h2 class="text-xl font-semibold text-green-400"><i class="bi bi-filetype-json mr-2"></i>JSON Result</h2>
+                    <div class="flex items-center space-x-3 text-xl">
+                        <button id="download-button" class="text-gray-400 hover:text-green-400 transition-colors" title="Download as JSON"><i class="bi bi-download"></i></button>
+                        <button id="refresh-button" class="text-gray-400 hover:text-blue-400 transition-colors" title="Refresh Data"><i class="bi bi-arrow-clockwise"></i></button>
+                        <button id="view-raw-button" class="text-gray-400 hover:text-yellow-400 transition-colors" title="View as Raw"><i class="bi bi-eye"></i></button>
                     </div>
                 </div>
-                <div id="jsonResult" class="p-4">
-                    <!-- JSON will be injected here -->
+                <!-- Result Content -->
+                <div class="p-4">
+                    <pre class="w-full h-96 overflow-auto bg-gray-900 p-4 rounded-md text-sm"><code id="json-output"></code></pre>
                 </div>
             </div>
-        </main>
+        </div>
+
+        <!-- Bootstrap-style Messages -->
+        <div id="message-toggle" class="mt-4"></div>
+
     </div>
 
-    <!-- Footer -->
-    <footer class="text-center p-4 text-slate-500">
-        <div class="flex justify-center space-x-6 text-2xl mb-2">
-            <a href="https://github.com/YOUR_USERNAME/ai-scraper" target="_blank" class="hover:text-sky-400 transition-colors" title="View Source on GitHub"><i class="bi bi-github"></i></a>
-            <a href="https://www.facebook.com/YOUR_PROFILE" target="_blank" class="hover:text-sky-400 transition-colors" title="Contact Owner on Facebook"><i class="bi bi-facebook"></i></a>
-        </div>
-        <p>Created with ❤️ using Node.js, Express, and Gemini AI.</p>
-    </footer>
-
-    <!-- Bootstrap JS (for spinner functionality) -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-    <!-- Custom JS -->
     <script src="/js/main.js"></script>
 </body>
 </html>
