--- a/public/index.html
+++ b/public/index.html
@@ -28,14 +28,15 @@
         }
     </style>
 </head>
-<!-- CHANGE 1: Make the body a full-height flex column -->
+<!-- This structure creates the sticky footer -->
 <body class="bg-gray-900 text-gray-200 font-sans antialiased min-h-screen flex flex-col">
 
-    <!-- CHANGE 2: Make the main container grow to fill available space -->
+    <!-- The 'flex-grow' class pushes the footer down -->
     <main class="container mx-auto p-4 md:p-8 max-w-4xl flex-grow">
-        <!-- Header -->
-        <header class="flex justify-between items-center mb-6">
-            <h1 class="text-3xl md:text-4xl font-bold text-cyan-400">
+        
+        <!-- CHANGE 1: A fully responsive header -->
+        <header class="flex flex-col md:flex-row justify-between items-center mb-8">
+            <h1 class="text-3xl md:text-4xl font-bold text-cyan-400 mb-4 md:mb-0">
                 <i class="bi bi-robot mr-2"></i>AI Web Scraper
             </h1>
         </header>
@@ -77,7 +78,7 @@
         </div>
     </main>
 
-    <!-- CHANGE 3: Footer is now outside the main container, at the bottom of the body -->
+    <!-- CHANGE 2: Footer is separate and contains the social icons -->
     <footer class="py-8">
         <div class="flex justify-center items-center space-x-6">
              <a href="https://github.com/YOUR_GITHUB_USERNAME/ai-web-scraper" target="_blank" class="p-3 border-2 border-gray-700 rounded-full transition-all duration-300 hover:scale-110 hover:border-white text-gray-400 hover:text-white" title="Source Code">
